tdf#150832: Revert "tdf#150034 very slow opening pathological chart"

This reverts commit 613f6e75fbfcc024fc9c3732261cbf2cda6f4ad8.

Reason for revert: it seems all charts in XLS files are affected.
At least I could reproduce it with all the XLS files I tested it with.

Change-Id: I68d13d6f609521ce6af759cf25249656176b66cd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139557
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>